# sh_engine

./: CMakeLists.txt  README.md
shaders/: brdf_lut.cs.hlsl  common.hlsli  common_meshlet.hlsli  composite.ps.hlsl  constant.hlsli  equirect_to_cube.cs.hlsl  fullscreen.vs.hlsl  gbuffer.ms.hlsl  gbuffer.ps.hlsl  gbuffer.vs.hlsl  irradiance_cube.cs.hlsl  lighting.ps.hlsl  lighting.vs.hlsl  meshlet_pc.hlsli  oit.ps.hlsl  shadow.ps.hlsl  shadow.vs.hlsl  skybox.ps.hlsl  specular_cube.cs.hlsl  test.ps.hlsl  test.vs.hlsl  translucent.ps.hlsl  translucent.vs.hlsl
source/: enumHelper.h  main.cpp  pch.h
source/mesh/: glTFMesh.cpp  glTFMesh.h  meshModelManager.cpp  meshModelManager.h
source/renderer/: compositePass.cpp  compositePass.h  drawPass.cpp  drawPass.h  gbufferPass.cpp  gbufferPass.h  gbufferPass_meshlet.cpp  gbufferPass_meshlet.h  indirectDrawPass.cpp  indirectDrawPass.h  lightingPass.cpp  lightingPass.h  meshletDrawPass.cpp  meshletDrawPass.h  oitResolvePass.cpp  oitResolvePass.h  renderShared.cpp  renderShared.h  renderer.cpp  renderer.h  shadowPass.cpp  shadowPass.h  skyPass.cpp  skyPass.h  textureCache.cpp  textureCache.h  translucentPass.cpp  translucentPass.h
source/renderer/meshlet/: meshletDef.h
source/rhi/: rhiBindlessTable.cpp  rhiBindlessTable.h  rhiBuffer.cpp  rhiBuffer.h  rhiCmdCenter.cpp  rhiCmdCenter.h  rhiCommandList.h  rhiDefs.h  rhiDescriptor.h  rhiDeviceContext.cpp  rhiDeviceContext.h  rhiFrameContext.cpp  rhiFrameContext.h  rhiGraphicsQueue.h  rhiPipeline.h  rhiQueue.h  rhiRenderResource.cpp  rhiRenderResource.h  rhiRenderpass.h  rhiResource.cpp  rhiResource.h  rhiSampler.h  rhiShader.h  rhiSubmitInfo.h  rhiSwapChain.h  rhiSynchroize.h  rhiTextureBindlessTable.cpp  rhiTextureBindlessTable.h  rhiTextureView.cpp  rhiTextureView.h
source/rhi/vulkan/: vkBarrier.h  vkBindlessTable.cpp  vkBindlessTable.h  vkBuffer.cpp  vkBuffer.h  vkCmdCenter.cpp  vkCmdCenter.h  vkCommandList.cpp  vkCommandList.h  vkCommon.h  vkDescriptor.cpp  vkDescriptor.h  vkDeviceContext.cpp  vkDeviceContext.h  vkFrameContext.cpp  vkFrameContext.h  vkGraphicsQueue.cpp  vkGraphicsQueue.h  vkImageViewCache.cpp  vkImageViewCache.h  vkMemory.cpp  vkMemory.h  vkPipeline.cpp  vkPipeline.h  vkQueue.cpp  vkQueue.h  vkSampler.cpp  vkSampler.h  vkSurface.cpp  vkSurface.h  vkSwapchain.cpp  vkSwapchain.h  vkSynchronize.cpp  vkSynchronize.h  vkTexture.cpp  vkTexture.h  vkTextureBindlessTable.cpp  vkTextureBindlessTable.h  vkTextureCubemap.cpp  vkTextureCubemap.h  (+1 more)
source/scene/: camera.cpp  camera.h  scene.cpp  scene.h  sponzaScene.cpp  sponzaScene.h
source/scene/actor/: actor.cpp  actor.h  meshActor.cpp  meshActor.h
source/scene/actor/component/: meshComponent.cpp  meshComponent.h  transformComponent.h
source/scene/light/: directionalLightActor.cpp  directionalLightActor.h  lightActor.cpp  lightActor.h
source/util/: hash.h  packing.h
